Add findBooksByName endpoint
